<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023-2023. Encept Ltd Company, https://encept.co
  ~ contact: support@encept.co
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ScannerFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/imgFlash"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="360dp"
        app:cardElevation="1dp"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="#00000000"
        app:layout_constraintBottom_toBottomOf="@+id/viewFinder"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgFlashIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:padding="6dp"
            android:src="@drawable/ic_flash_on"
            tools:ignore="ContentDescription"
            app:tint="@color/white" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:backgroundTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewFinder">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:text="@string/made_in" />

                <TextView
                    android:id="@+id/txtCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    tools:text="Egypt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:text="@string/barcode" />

                <TextView
                    android:id="@+id/txtBarcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:textIsSelectable="true"
                    tools:text="1218173647321" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/product_okay"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/cardResult"
        app:layout_constraintStart_toStartOf="@+id/cardResult"
        app:layout_constraintTop_toBottomOf="@+id/cardResult"
        tools:visibility="visible" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResult" />
</androidx.constraintlayout.widget.ConstraintLayout>